# cxx_qt_project_base

./: CMakeLists.txt  README.md
src/: test.cpp
vcpkg_install/: install.cmd  install.sh
